--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-numpy
-pandas
-Pillow
-scikit-learn
+streamlit==1.35.0
+numpy==1.26.4
+pandas==2.2.2
+Pillow==10.3.0
+scikit-learn==1.4.2
 opencv-python-headless==4.9.0.80
-fpdf
+fpdf==1.7.2
